--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,10 @@
 name: Referral
-version: 2.2.2
-api-version: 1.13
+version: 2.2.3
+api-version: 1.20
 author: Teenaapje
 main: Me.Teenaapje.Referral.ReferralCore
 description: Referral
+folia-supported: true
 softdepend: [PlaceholderAPI]
 commands:
    Ref:
